--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -33,8 +33,8 @@ a:hover:not([tabindex]) {
 }
 
 .notify-icon img {
-  height: 42px;
-  min-width: auto !important;
+  font-size: 32px;
+  height: auto;
 }
 
 .q-item.svg-color img {
